--- a/WeatherDashboard.Components/WeatherDashboard.Components.csproj
+++ b/WeatherDashboard.Components/WeatherDashboard.Components.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.8" />
+    <PackageReference Include="Syncfusion.Blazor" Version="19.2.0.49" />
   </ItemGroup>
 
   <ItemGroup>
