--- a/WeatherDashboard.Shared/WeatherDashboard.Shared.csproj
+++ b/WeatherDashboard.Shared/WeatherDashboard.Shared.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Syncfusion.Blazor" Version="19.2.0.49" />
+  </ItemGroup>
+
 </Project>
